# astrostacker

./: .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml  run_cached_alignment.py  tune_hot_pixels.py
astrostacker/: __init__.py  alignment.py  cache.py  cli.py  debug.py  export.py  fusion.py  hotpixels.py  lens.py  metadata.py  pipeline.py  rawio.py  segmentation.py  stars.py
