[project]
name = "astrostacker"
version = "0.1.0"
description = "Wide-angle astrophotography stacking pipeline for tripod RAW sequences."
readme = "DESIGN.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "ftfy==6.1.1",
    "huggingface_hub>=0.34",
    "iopath>=0.1.10",
    "numpy>=2.0,<3",
    "opencv-python>=4.10",
    "pillow>=10.4",
    "psutil>=7.1.0",
    "pycocotools>=2.0.10",
    "rawpy>=0.24.0",
    "regex>=2024.11.6",
    "scipy>=1.14",
    "timm>=1.0.17",
    "tifffile>=2025.1.10",
    "torch>=2.5",
    "torchvision>=0.20",
]

[project.scripts]
astrostacker = "astrostacker.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["astrostacker*"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
